--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ config/*
 # If you are using pypi integration
 .pypirc
 
+examples/
+resources/
+output/
+
 _proc/
 # The following files ignored are part of a standard python project with minor additions
 _docs/
