--- a/conda.dev.env.yaml
+++ b/conda.dev.env.yaml
@@ -22,6 +22,9 @@ dependencies:
   - twine # for pypi deployments
   - anaconda-client # for anaconda deployments
   - conda-build # for conda deployments
+  - blast 
+  - mummer
+  - samtools
   # Standard libraries used in our code development
   - python-dotenv # for loading environment variables from .env file
   - pip:
